--- a/app/src/main/res/layout/bridgelistlinear.xml
+++ b/app/src/main/res/layout/bridgelistlinear.xml
@@ -37,6 +37,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#000" />
 
-   
+
+	<Button
+		android:id="@+id/btnDebug"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="Debug No Bridge" />
 
 </LinearLayout>
