--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -19,18 +19,19 @@
         android:text="@string/no_bridge"
        />
 
-        <ListView
-        android:id="@+id/bridge_list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:cacheColorHint="#00000000" 
-    	android:focusable="true"
-    	android:choiceMode="singleChoice" 
-    	android:dividerHeight="3sp"  
-    	android:layout_marginLeft="2dip"
+	<ListView
+		android:id="@+id/bridge_list"
+		android:layout_width="fill_parent"
+		android:layout_height="663dp"
+		android:layout_marginLeft="2dip"
+		android:layout_marginTop="3dip"
 		android:layout_marginRight="2dip"
-		android:layout_marginTop="3dip" >
-    </ListView>
+		android:layout_weight="1"
+		android:cacheColorHint="#00000000"
+		android:choiceMode="singleChoice"
+		android:dividerHeight="3sp"
+		android:focusable="true">
+
+	</ListView>
 
 </LinearLayout>
