Updated bottom nav colours

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/helios_steelblue"
+        app:itemIconTint="@color/helios_darkblue"
+        app:itemTextColor="@color/helios_darkblue"
         app:menu="@menu/menu_bottom_navigation" />
 
 </RelativeLayout>
