--- a/app/src/main/res/layout/bridgelistlinear.xml
+++ b/app/src/main/res/layout/bridgelistlinear.xml
@@ -1,48 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:theme="@android:style/Theme.Dialog"
-    android:id="@+id/linear1"
-    android:minWidth="300dp" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/linear1"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:background="@drawable/bg2"
+	android:minWidth="300dp"
+	android:orientation="vertical"
+	android:paddingLeft="0dp"
+	android:paddingRight="0dp"
+	android:theme="@android:style/Theme.Dialog">
 
-    <ListView
-        android:id="@+id/bridge_list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:cacheColorHint="#00000000" 
-    	android:focusable="true"
-    	android:choiceMode="singleChoice" 
-    	android:dividerHeight="3sp"  
-    	android:layout_marginLeft="2dip"
-		android:layout_marginRight="2dip"
-		android:layout_marginTop="3dip" >
-    </ListView>
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|center_vertical"
-        android:layout_marginTop="15dp"
-        android:gravity="center_horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:singleLine="true"
-        android:text="@string/txt_select_smartbridge"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#000" />
+	<ListView
+		android:id="@+id/bridge_list"
+		android:layout_width="400dp"
+		android:layout_height="466dp"
+		android:layout_centerHorizontal="true"
+		android:layout_marginStart="5dp"
+		android:layout_marginTop="20dp"
+		android:layout_marginEnd="5dp"
+		android:cacheColorHint="#00000000"
+		android:choiceMode="singleChoice"
+		android:dividerHeight="3sp"
+		android:focusable="true">
 
+	</ListView>
+
+	<TextView
+		android:id="@+id/textView1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/bridge_list"
+		android:layout_alignParentStart="false"
+		android:layout_centerHorizontal="true"
+		android:layout_marginStart="55dp"
+		android:layout_marginTop="20dp"
+		android:fontFamily="@font/ubuntu_bold"
+		android:singleLine="true"
+		android:text="@string/txt_select_smartbridge"
+		android:textAppearance="?android:attr/textAppearanceSmall"
+		android:textColor="#FFFFFF"
+		android:textStyle="bold" />
 
 	<Button
 		android:id="@+id/btnDebug"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		android:text="Debug No Bridge" />
+		android:layout_width="200dp"
+		android:layout_height="38dp"
 
-</LinearLayout>
+		android:layout_below="@+id/textView1"
+		android:layout_centerHorizontal="true"
+		android:layout_marginStart="20dp"
+		android:layout_marginTop="30dp"
+		android:background="@drawable/bt1"
+		android:textColor="#FFFFFF" />
+
+</RelativeLayout>
