--- a/app/src/main/res/layout/fragment_individual.xml
+++ b/app/src/main/res/layout/fragment_individual.xml
@@ -1,16 +1,31 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg2"
     tools:context="com.philips.lighting.fragments.IndividualFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <Button
         android:id="@+id/btnGetLights"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|top"
-        android:text="@string/get_lights" />
+        android:layout_width="185dp"
+        android:layout_height="33dp"
+        android:layout_below="@+id/rvIndividual"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="bottom|center"
+        android:layout_marginStart="114dp"
+        android:layout_marginTop="39dp"
+        android:background="@drawable/al1" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvIndividual"
+        android:layout_width="match_parent"
+        android:layout_height="477dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp" />
+
+</RelativeLayout>
