--- a/app/src/main/res/layout/fragment_random.xml
+++ b/app/src/main/res/layout/fragment_random.xml
@@ -1,12 +1,12 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg2"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.philips.lighting.fragments.RandomFragment">
 
 
@@ -14,7 +14,8 @@
             android:id="@+id/tvInstruct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/txt_click_random_button" />
+            android:text="@string/txt_click_random_button"
+            android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/btnRand"
@@ -23,6 +24,8 @@
             android:layout_below="@+id/tvInstruct"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:text="@string/btn_random" android:paddingLeft="10dp" android:paddingRight="10dp"/>
+            android:paddingLeft="10dp"
+            android:text="@string/btn_random"
+            android:paddingRight="10dp" />
 
 </RelativeLayout>
