--- a/app/src/main/res/layout/lightslist.xml
+++ b/app/src/main/res/layout/lightslist.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/view2"
@@ -42,6 +42,7 @@
         android:layout_marginTop="11dp"
         android:layout_marginEnd="7dp"
         android:layout_toStartOf="@+id/tvLabel"
+        android:checked="false"
         android:textColor="#FFFFFF" />
 
     <TextView
