switches turn bulbs on and off

--- a/app/src/main/res/layout/lightslist.xml
+++ b/app/src/main/res/layout/lightslist.xml
@@ -34,7 +34,7 @@
         android:textSize="18sp"
         tools:text="label" />
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/lightSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
