Edited the theme of the app. Added logo.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/helios_steelblue"
-        app:itemIconTint="@color/helios_darkblue"
-        app:itemTextColor="@color/helios_darkblue"
+        app:itemIconTint="@color/helios_white"
+        app:itemTextColor="@color/helios_white"
         app:menu="@menu/menu_bottom_navigation" />
 
 </RelativeLayout>
