--- a/app/src/main/res/layout/bridgelistlinear.xml
+++ b/app/src/main/res/layout/bridgelistlinear.xml
@@ -11,17 +11,32 @@
 	android:theme="@android:style/Theme.Dialog">
 
 
+	<TextView
+		android:id="@+id/textView4"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentTop="true"
+		android:layout_marginStart="20dp"
+		android:layout_marginTop="20dp"
+		android:fontFamily="@font/ubuntu_medium"
+		android:text="SETUP"
+		android:textColor="#CFCFCF"
+		android:textSize="34sp" />
+
 	<ListView
 		android:id="@+id/bridge_list"
 		android:layout_width="400dp"
 		android:layout_height="466dp"
+		android:layout_below="@+id/textView4"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentEnd="true"
 		android:layout_centerHorizontal="true"
 		android:layout_marginStart="5dp"
-		android:layout_marginTop="20dp"
+		android:layout_marginTop="10dp"
 		android:layout_marginEnd="5dp"
 		android:cacheColorHint="#00000000"
 		android:choiceMode="singleChoice"
-		android:dividerHeight="3sp"
 		android:focusable="true">
 
 	</ListView>
@@ -44,14 +59,9 @@
 
 	<Button
 		android:id="@+id/btnDebug"
-		android:layout_width="200dp"
-		android:layout_height="38dp"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
 
-		android:layout_below="@+id/textView1"
-		android:layout_centerHorizontal="true"
-		android:layout_marginStart="20dp"
-		android:layout_marginTop="30dp"
-		android:background="@drawable/bt1"
 		android:textColor="#FFFFFF" />
 
 </RelativeLayout>
