--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,30 +3,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context="com.philips.lighting.fragments.DetailFragment">
+    tools:context="com.philips.lighting.fragments.DetailFragment"
+    android:background="@drawable/bg2"
+    >
+
 
     <TextView
         android:id="@+id/tvLightName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu_medium"
         android:paddingBottom="30sp"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textColor="#cfcfcf"
+        android:textSize="34sp"
         tools:text="@string/hello_blank_fragment" />
 
     <TextView
         android:id="@+id/tvLabelBrightness"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvLightName"
-        android:text="@string/brightness"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_below="@+id/tvLightName"
+        android:layout_marginTop="0dp"
         android:paddingLeft="16dp"
         android:paddingTop="8dp"
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
-        />
+        android:text="@string/brightness"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvBrightness"
@@ -38,6 +48,7 @@
         android:paddingTop="8dp"
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
+        android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
         tools:text="@string/seekVal" />
@@ -56,14 +67,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/skBrightness"
-        android:text="@string/red"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:paddingLeft="16dp"
         android:paddingTop="8dp"
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
-        />
+        android:text="@string/red"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvRed"
@@ -75,6 +86,7 @@
         android:paddingTop="8dp"
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
+        android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
         tools:text="@string/seekVal" />
@@ -93,14 +105,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/skRed"
-        android:text="@string/green"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:paddingLeft="16dp"
         android:paddingTop="8dp"
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
-        />
+        android:text="@string/green"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvGreen"
@@ -112,6 +124,7 @@
         android:paddingTop="8dp"
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
+        android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
         tools:text="@string/seekVal" />
@@ -130,14 +143,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/skGreen"
-        android:text="@string/blue"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:paddingLeft="16dp"
         android:paddingTop="8dp"
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
-        />
+        android:text="@string/blue"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvBlue"
@@ -149,6 +162,7 @@
         android:paddingTop="8dp"
         android:paddingRight="16dp"
         android:paddingBottom="8dp"
+        android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
         tools:text="@string/seekVal" />
