--- a/app/src/main/res/layout/fragment_individual.xml
+++ b/app/src/main/res/layout/fragment_individual.xml
@@ -6,12 +6,29 @@
     android:background="@drawable/bg2"
     tools:context="com.philips.lighting.fragments.IndividualFragment">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu_medium"
+        android:text="INDIVIDUAL"
+        android:textColor="#CFCFCF"
+        android:textSize="34sp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvIndividual"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="409dp"
+        android:layout_height="588dp"
+        android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="0dp"
         android:padding="5dp" />
 
 </RelativeLayout>
