--- a/app/src/main/res/layout/fragment_scene.xml
+++ b/app/src/main/res/layout/fragment_scene.xml
@@ -3,12 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
+    android:background="@drawable/bg2"
     android:layout_height="match_parent"
     tools:context="com.philips.lighting.fragments.SceneFragment">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu_medium"
+        android:text="SCENES"
+        android:textColor="#CFCFCF"
+        android:textSize="34sp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvScenes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="588dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="6dp" />
 </RelativeLayout>
