--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -3,19 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingStart="8dp"
     android:paddingEnd="8dp">
 
+
+    <View
+        android:id="@+id/view3"
+        android:layout_width="wrap_content"
+        android:layout_height="59dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="1dp"
+        android:background="@drawable/back" />
+
+    <View
+        android:id="@+id/view5"
+        android:layout_width="402dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/tvGroupName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/swGroup"
         android:layout_alignBottom="@id/swGroup"
         android:layout_alignParentStart="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
         android:layout_toStartOf="@id/swGroup"
         android:padding="4dp"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         tools:text="Groups Here" />
 
@@ -23,7 +44,11 @@
         android:id="@+id/swGroup"
         android:layout_width="60dp"
         android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="8dp"
+        android:thumb="@drawable/thumb"
+        app:track="@drawable/track" />
+
 
 </RelativeLayout>
