--- a/app/src/main/res/layout/item_scene.xml
+++ b/app/src/main/res/layout/item_scene.xml
@@ -7,22 +7,41 @@
     android:paddingEnd="8dp">
 
 
+    <View
+        android:id="@+id/view4"
+        android:layout_width="wrap_content"
+        android:layout_height="51dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/back" />
+
+    <View
+        android:id="@+id/view6"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp" />
+
     <Button
         android:id="@+id/btnScene"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activate" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="14dp"
+        android:background="@drawable/activate"
+        tools:text="@string/activate" />
 
     <TextView
         android:id="@+id/tvScene"
-        android:layout_width="match_parent"
+        android:layout_width="227dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/btnScene"
-        android:layout_alignBottom="@id/btnScene"
+        android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/btnScene"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="4dp"
+        android:layout_toEndOf="@+id/btnScene"
         android:padding="8dp"
         android:textAlignment="gravity"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         tools:text="Scene Name" />
+
 </RelativeLayout>
