--- a/app/src/main/res/layout/lightslist.xml
+++ b/app/src/main/res/layout/lightslist.xml
@@ -2,23 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/cardview_shadow_start_color"
-        android:backgroundTintMode="add" />
+        android:background="@drawable/back" />
+
+    <View
+        android:id="@+id/view7"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:id="@+id/tvlightName"
-        android:layout_width="206dp"
-        android:layout_height="27dp"
+        android:layout_width="209dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="11dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="15dp"
         android:fontFamily="@font/ubuntu_bold"
         android:textColor="#FFFFFF"
@@ -31,8 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="16dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="14dp"
         android:layout_toStartOf="@+id/lightSwitch"
         android:fontFamily="@font/ubuntu"
         android:textColor="#FFFFFF"
@@ -48,7 +57,9 @@
         android:layout_marginEnd="7dp"
         android:layout_toStartOf="@+id/btnControl"
         android:checked="false"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        android:thumb="@drawable/thumb"
+        app:track="@drawable/track" />/>
 
     <Button
         android:id="@+id/btnControl"
